[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Settings" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 340.0
margin_top = 60.0
margin_right = 940.0
margin_bottom = 660.0
rect_min_size = Vector2( 600, 600 )
custom_constants/separation = 64

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 600.0
margin_bottom = 211.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_top = 6.0
margin_right = 600.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 275.0
margin_right = 600.0
margin_bottom = 339.0
rect_min_size = Vector2( 0, 64 )
text = "Continue"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 403.0
margin_right = 600.0
margin_bottom = 417.0
text = "Back To Title Screen"
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
